--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/riyac1601/monsters_rolodex.git",
+  "homepage": "https://riyac1601.github.io/monsters_rolodex",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
